linked the css file to the index file

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
     <head>
         <title>STREET FOOD</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="main.css">
+
     </head>
     <body>
+        
         
     </body>
 </html>
