added a navigation bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 
     </head>
     <body>
-        
+        <div id="container">
+            <div id="header"><img src="images.jpg"></div>
+            <div id="navbar">Navigation bar</div>
+        </div>
+         <button>Home</button>
+         <button>About</button>
+         <button>Our Menu</button>
+         <button>Happy Hour</button>
+         <button>Catering</button>
+         <button>Reservation</button>
+         <button>Gallery</button>
+         <button>Contact</button>
+
         
     </body>
 </html>
