--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
          <button>Gallery</button>
          <button>Contact</button>
 
+         <img class="image" src="images (1).jpg">
+
         
     </body>
 </html>
