added an h1 tag and ap tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>STREET FOOD</title>
+        <title>BURGER STREET</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="main.css">
@@ -22,7 +22,10 @@
          <button>Contact</button>
 
          <img class="image" src="images (1).jpg">
-
-        
+         <h1>Burger Street</h1> 
+         <p>The food we eat means alot in keeping and maintaining our body interms of growth and sustainance of hunger just when needed hence the tastiness of food is a very essential aspect in eating and that's where we as burger street comein.
+            We not omly provide you with a breath taking delicacy but every other extra things needed for an enjoyable burger.
+         </p>
+             
     </body>
 </html>
