added a button tab

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
          <p>The food we eat means alot in keeping and maintaining our body interms of growth and sustainance of hunger just when needed hence the tastiness of food is a very essential aspect in eating and that's where we as burger street comein.
             We not omly provide you with a breath taking delicacy but every other extra things needed for an enjoyable burger.
          </p>
-             
+
+         <button>Order Now</button>
+         
+
     </body>
 </html>
