--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
          </p>
 
          <button>Order Now</button>
-         
+         <img src="DINNER-DATES-COLUMBUS-OHIO.png" alt="">
+
 
     </body>
 </html>
