added an h2 tag

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
          <button>Order Now</button>
          <img src="DINNER-DATES-COLUMBUS-OHIO.png" alt="">
+         <h2>Eat Together</h2>
 
 
     </body>
