--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
          <button>Order Now</button>
          <img src="DINNER-DATES-COLUMBUS-OHIO.png" alt="">
          <h2>Eat Together</h2>
+         <p>Eating together encourages attachment promoting good behaviour and enhances conversation between people hence providing adjustments
+            and establishes confidence which encourages healthy development.
+         </p>
 
 
     </body>
