--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
          <p>Eating together encourages attachment promoting good behaviour and enhances conversation between people hence providing adjustments
             and establishes confidence which encourages healthy development.
          </p>
+         <h3>Explore Menu</h3>
 
 
     </body>
