--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             and establishes confidence which encourages healthy development.
          </p>
          <h3>Explore Menu</h3>
+         <img src="Popl_burger.jpg">
+         <p>The history of the hamburger is contested, and some say it goes back to ancient Rome, but one theory about the invention of the modern hamburger is that it can be ascribed to Charlie Nagreen, later known as 'Hamburger Charlie',
+             who in 1885 squashed a beef meatball between slices of bread so his customers could walk around eating.</p>
 
 
     </body>
