--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
              <p>this is a burger that might not be everyone's first choice, but should definitely be one all burger lovers get to know. Turkey is a delicious, tasty and dry meat
                  that is packed full of flavour, making it a perfect alternative to red meat for a burger patty.</p>
 
+                 <h5>Elk Burger</h5>
+                 <img src="burger.jpg">
+                 <p>Elk meat, recently rising in popularity because of a certain bow-hunting podcast celebrity, is something Canadians and Scandinavians have been eating for millennia.
+                     It makes a mean burger too.</p>
+
+                     <h5>Cheese Burger</h5>
+                     <img src="cheeseburger.jpg">
+                     <p>The addition of cheese transforms a burger... into a cheeseburger. But all joking aside, it just makes sense to add a layer of cheese to your burger, 
+                        whether it's blue cheese or cheddar, you can't go wrong.</p>
+
 
     </body>
 </html>
