--- a/index.html
+++ b/index.html
@@ -56,8 +56,13 @@
 
                         <h5>Beyond-meat Burger</h5>
                         <img src="beyond meat burger.jpg">
-                        <p>aking all the headlines for the last few years, the beyond-meat burger has been one of those food
+                        <p>making all the headlines for the last few years, the beyond-meat burger has been one of those food
                              innovations that has helped shift the dial on how people perceive plant-based food in general.</p>
+
+                             <h5>Wild Salmon Burger</h5>
+                             <img src="salmon_burger.jpg">
+                             <p>Of all fish, salmon makes probably the best fish patty for a burger. 
+                                The main thing to consider is the source of your salmon. The addition of dill, capers, mayo and ginger takes this burger the highest level.</p>
 
 
     </body>
