--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          </p>
 
          <button>Order Now</button>
-         <img src="DINNER-DATES-COLUMBUS-OHIO.png" alt="">
+         <img src="download 1.jpg" alt="">
          <h2>Eat Together</h2>
          <p>Eating together encourages attachment promoting good behaviour and enhances conversation between people hence providing adjustments
             and establishes confidence which encourages healthy development.
@@ -63,6 +63,11 @@
                              <img src="salmon_burger.jpg">
                              <p>Of all fish, salmon makes probably the best fish patty for a burger. 
                                 The main thing to consider is the source of your salmon. The addition of dill, capers, mayo and ginger takes this burger the highest level.</p>
+
+                                <h3>Hot Deals</h3>
+                                <img src="hot deals.jpg">
+
+                                <
 
 
     </body>
