added a h4 tag and a p tag

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
                                 <h3>Hot Deals</h3>
                                 <img src="hot deals.jpg">
 
-                                <
+                                <h4>Contact,  Us</h4>
+                                <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.
+                                    
+                                </p>
 
 
     </body>
